infra-vpn-generate/releases/vault-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      ingress.kubernetes.io/force-ssl-redirect: "true"
    generation: 2
    name: ingress-vault
    namespace: vault
  spec:
    rules:
    - host: vault.devops.do
      http:
        paths:
        - backend:
            service:
              name: vault
              port:
                number: 8200
          path: /
          pathType: ImplementationSpecific
